oaklisp (1.3.3) unstable; urgency=low

  * tetex-extra build dependency (closes: #136821)
  * solve bootstrapping issue (closes: #122117)   XXX FINISH ME!!! XXX
  * remove silly build dependency on etags
  * rev deb policy

 --

oaklisp (1.3.2) unstable; urgency=low

  * Patch for 68000.  Build dependency.  Split out documentation. 
	
 -- Barak A. Pearlmutter <bap@cs.unm.edu>  Sun, 31 Dec 2000 13:06:21 -0500

oaklisp (1.3.1) unstable; urgency=low

  * Initial Release.

 -- Barak A. Pearlmutter <bap@cs.unm.edu>  Fri,  7 Jan 2000 04:29:57 -0500