@@ -1,0 +1,8 @@
+Document: oaklisp-lang
+Title: Oaklisp Language Manual
+Author: Barak A. Pearlmutter and Kevin J. Lang
+Abstract: Description of the Oaklisp language for programmers.
+Section: Programming/Scheme
+
+Format: PostScript
+Files: /usr/share/doc/oaklisp/lang.ps.gz
