@@ -1,0 +1,9 @@
+Document: oaklisp-lim
+Title: Oaklisp Implementation Manual
+Author: Barak A. Pearlmutter and Kevin J. Lang
+Abstract: Description of the implementation internals of the Oaklisp
+ language, for those who wish to modify or extend the implementation.
+Section: Programming/Scheme
+
+Format: PostScript
+Files: /usr/share/doc/oaklisp/lim.ps.gz
